folk from previous Assignment

--- a/proposal.html
+++ b/proposal.html
@@ -4,13 +4,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Web Documentation</title>
+	<title>Web Proposal</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 	<header>
-		<h1>Wild 2 Free - Website Documentation</h1>
+		<h1>Wild 2 Free - Website Proposal</h1>
 	</header>
 
 	<!-- NAVIGATION: Add your own list item links based on secion IDs and heading elements -->
