--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 				 target="_blank">main concept</a> of my website. Based on these, I iterated my ideas and made the final <a href="proposal.html#mockups"
 				 target="_blank">mock-ups</a> , which received quite good feedback from both my tutor and my peers, and I was satisfied
 				with the design choice I did as well. Thus, the most challengeable things for me was to overcome technical problems and
-				implement all of the designs into the real website, which as close as possible to mock-ups. During this process, I also
-				conducted along with self-reflection and refinements, which was demonstrated as below: </p>
+				implement all of the designs into the real website, which was expected to resemble mock-ups as much as possible. During this process, I also
+				conducted along with self-reflection and refinements that demonstrated as below: </p>
 
 			<h3 id="iteration">Iteration</h3>
 
@@ -81,7 +81,7 @@
         <figcaption>This is the final version of mobile screen.</figcaption>
       </figure>
 
-      <blockquote>Vertical card-like poster run quite well through CSS responsive on the mobile screen size. Meanwhile, the portraits of animals are dominant on the screen. This kind of element placement will emphasis wildlife and obtain more attention as well. </blockquote>
+      <blockquote>Vertical card-like posters run quite well through CSS responsive on the mobile screen size. Meanwhile, the portraits of animals are dominant on the screen. This kind of element placement will emphasis wildlife and obtain more attention as well. </blockquote>
 
       <h4> "About us" page</h4>
 			<figure>
@@ -93,33 +93,53 @@
         <figcaption>This is the screenshot of final version </figcaption>
       </figure>
       <blockquote>
-        
+        In “about us” pages, the content is divided into three parts by three circles with the most important aspects of this charity. The layout and design elements are relatively simple and clean for introducing basic information. In this way, people can quickly know about this organisation and get closer with it by this easy-understand but also appealing content. On the other hand, the major task is to implement this design into the website level as much as possible. In the end, it has been achieved.
       </blockquote>
+      <figure>
+        <img src="mock-up/about_phone.jpg" alt="placeholder image" width="400px"/>
+        <figcaption>This is the mock-up of mobile version.</figcaption>
+        <img src="screenshot/mobile_2.png" alt="placeholder image" width="100%"/>
+        <img src="screenshot/mobile_3.png" alt="placeholder image" width="100%"/>
+        <figcaption>This is the final version of mobile screen.</figcaption>
+      </figure>
+      <blockquote>Similarly, all of the contents are allocated into a mobile screen with a smooth translation well. Especially for circle elements that are extremely suitable for vertical reading style, which is noticeable and vivid, while still left some space on the page. Through combining this pattern with words,  a simple and effective content display method can be applied.</blockquote>
 
       
 
       <h4> "Donate" page</h4>
 			<figure>
-				<img src="mock-up/MacBook - 6.png" alt="placeholder image"/>
-        <figcaption>This is a wireframe for desktop.</figcaption>
-        <br>
-        <img src="mock-up/donate_phone.png" alt="placeholder image"/>
-        <figcaption>This is a wireframe for mobile.</figcaption>
+				<img src="docs/donate.jpg" alt="placeholder image" width="500px"/>
+        <figcaption>This is a mockup for donatation page..</figcaption>
+        <img src="screenshot/donate.png" alt="placeholder image" width="100%"/>
+        </figure>
+      <blockquote>
+        For donation page, as mentioned by the proposal, donors want to know more about where their money goes, and how the organisation spend their money. Therefore, I decided to explain some specific usage of money(like What can 5 dollars do? how about 50? ) when donors hesitate whether to donate or not, they will know how specific they can help wildlife. Whilst through a design of subscribing function from Wild 2 Free, they will receive feedback and update after donation. In this way, donors can feel how actually helps they give are beneficial to animals, and wildlife is not far away from their life. On the other hand, due to the limitation of javascript, it seems impossible to make a slideshow function via CSS. Thus, “slideshow” function is removed there. 
+      </blockquote>
+      <figure>
+        <img src="mock-up/donate_phone.png" alt="placeholder image" width="200px"/>
+        <figcaption>This is the mock-up of mobile version.</figcaption>
+        <img src="screenshot/mobile_5.png" alt="placeholder image" width="100%"/>
+        <figcaption>This is the final version of mobile screen.</figcaption>
       </figure>
+      <blockquote>
+        Mobile version was fully implemented except slight background colour changes, and nothing different from mock-ups. Half image and half form have applied symmetrical design to create balance through equally weighted elements. This kind of visual impact will hold the viewer’s eye to follow the page content rather than sliding off it.
+      </blockquote>
+
+
 		</section>
     <section id="references">
 			<h2>References</h2>
       <ul>
-        <li>All of photo used in this proposal retrieved from: https://unsplash.com/ </li>
         <li>BushfireHelp. (2020). Retrieved from:
           https://www.bushfirehelp.org/organisations/wild-2-free-kangaroo-sanctuary</li>
+        <li>Font Awesome. (2020). The Iconic Font and CSS Toolkit. Retrieved from: https://fontawesome.com/v4.7.0/</li>
         <li>Gofundme. (2020). Retrieved from: 
 https://au.gofundme.com/</li>
         <li>World Animal Protection. (2020).Our beliefs we move the world to protect animals. Retrieved from:
  https://www.worldanimalprotection.org.uk/about/our-beliefs</li>
         <li>World Animal net (2020). Targeted Research. Retrieved from:
 http://worldanimal.net/targeted-research</li>
-        <li>Mercer, P. (2020). Wildlife Catastrophe Caused by Australian Bushfires. Retrieved from: https://www.voanews.com/east-asia-pacific/wildlife-catastrophe-caused-australian-bushfires</li>
+        <li>Wild 2 Free (2020). WILD 2 FREE INC. Retrieved from: https://wild2free.org.au/</li>
         <li>Tomitsch, M., Wrigley, C., Borthwick, M., Ahmadpour, N., Frawley, J., Kocaballi, B., ... & Loke, L. (2018). Design. Think. Make. Break.
 Repeat. A handbook of methods. Bis Publishers.</li>
 
