--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<!-- MAIN CONTENT: Add your own sections as needed -->
 	<main>
 		<!-- background section begins -->
-		<section id="refelction">
+		<section id="reflection">
 			<h2>Reflection on Proposal</h2>
 			<p>In the previous<a href="proposal.html" target="_blank"> proposal</a>, I conducted lots of background and user research
 				to figure out my <a href="proposal.html#target audience" target="_blank">target audience</a> and the <a href="proposal.html#concept"
@@ -113,7 +113,7 @@
         <img src="screenshot/donate.png" alt="placeholder image" width="100%"/>
         </figure>
       <blockquote>
-        For donation page, as mentioned by the proposal, donors want to know more about where their money goes, and how the organisation spend their money. Therefore, I decided to explain some specific usage of money(like What can 5 dollars do? how about 50? ) when donors hesitate whether to donate or not, they will know how specific they can help wildlife. Whilst through a design of subscribing function from Wild 2 Free, they will receive feedback and update after donation. In this way, donors can feel how actually helps they give are beneficial to animals, and wildlife is not far away from their life. On the other hand, due to the limitation of javascript, it seems impossible to make a slideshow function via CSS. Thus, “slideshow” function is removed there. 
+        For donation page, as mentioned by the <a href="proposal.html#user research" target="_blank">proposal</a> , donors want to know more about where their money goes, and how the organisation spend their money. Therefore, I decided to explain some specific usage of money(like What can 5 dollars do? how about 50? ) when donors hesitate whether to donate or not, they will know how specific they can help wildlife. Whilst through a design of subscribing function from Wild 2 Free, they will receive feedback and update after donation. In this way, donors can feel how actually helps they give are beneficial to animals, and wildlife is not far away from their life. On the other hand, due to the limitation of javascript, it seems impossible to make a slideshow function via CSS. Thus, “slideshow” function is removed there. 
       </blockquote>
       <figure>
         <img src="mock-up/donate_phone.png" alt="placeholder image" width="200px"/>
